--- a/src/theme/stylus/nav-icons.styl
+++ b/src/theme/stylus/nav-icons.styl
@@ -43,13 +43,13 @@
 }
 
 @media only screen and (max-width: $page-plus-sidebar-width) {
-    .nav-chapters { display: none }
+    .nav-wide-wrapper { display: none }
     .nav-wrapper { display: block }
 }
 
 @media only screen and (max-width: $page-plus-sidebar-width + $sidebar-width) {
     .sidebar-visible {
-        .nav-chapters { display: none }
+        .nav-wide-wrapper { display: none }
         .nav-wrapper { display: block }
     }
 }
