--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -81,9 +81,16 @@
                         <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-controls="sidebar">
                             <i class="fa fa-bars"></i>
                         </button>
-                        <button id="theme-toggle" class="icon-button" type="button" title="Change theme">
+                        <button id="theme-toggle" class="icon-button" type="button" title="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
                             <i class="fa fa-paint-brush"></i>
                         </button>
+                        <ul id="theme-list" class="theme-popup" aria-label="submenu">
+                            <li><button class="theme" id="light">Light <span class="default">(default)</span></button></li>
+                            <li><button class="theme" id="rust">Rust</button></li>
+                            <li><button class="theme" id="coal">Coal</button></li>
+                            <li><button class="theme" id="navy">Navy</button></li>
+                            <li><button class="theme" id="ayu">Ayu</button></li>
+                        </ul>
                     </div>
 
                     <h1 class="menu-title">{{ book_title }}</h1>
