--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -67,6 +67,10 @@
         color: $fg
         background: $theme-popup-bg
         border: 1px solid $theme-popup-border
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        display: none;
 
         .theme:hover { background-color: $theme-hover }
 
