fix(theme/stylus/theme-popup): Theme button inherits color
Bug introduced while making the popup accessible

--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -298,6 +298,7 @@ table thead td {
   white-space: nowrap;
   text-align: left;
   cursor: pointer;
+  color: inherit;
   background: inherit;
   font-size: inherit;
 }
