--- a/src/theme/stylus/theme-popup.styl
+++ b/src/theme/stylus/theme-popup.styl
@@ -17,6 +17,7 @@
         white-space: nowrap
         text-align: left
         cursor: pointer
+        color inherit
         background: inherit;
         font-size: inherit;
 
