--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -133,6 +133,12 @@
 
             :hover { color: $sidebar-active; }
             i { margin-left: 8px; }
+            button {
+                color: inherit;
+                background: transparent;
+                border: none;
+                cursor: inherit;
+            }
         }
 
         & > .result { margin-top: 10px; }
