--- a/src/theme/stylus/theme-popup.styl
+++ b/src/theme/stylus/theme-popup.styl
@@ -8,11 +8,18 @@
     font-size: 0.7em
 
     .theme {
+        display: inline
+        border: 0
         margin: 0
         padding: 2px 10px
         line-height: 25px
+        width: 100%
         white-space: nowrap
+        text-align: left
         cursor: pointer
+        color inherit
+        background: inherit;
+        font-size: inherit;
 
         &:hover:first-child,
         &:hover:last-child {
