--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -12,6 +12,11 @@
         }
     }
 
+    .menu-bar {
+        background-color: $bg
+        z-index: 101
+    }
+
     .sidebar {
         background-color: $sidebar-bg
         color: $sidebar-fg
