--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -14,7 +14,8 @@
 
     .menu-bar {
         background-color: $bg
-        z-index: 101
+        border-bottom: $table-border-color 1px solid;
+        margin: auto (- $page-padding);
     }
 
     .sidebar {
