--- a/src/theme/stylus/menu.styl
+++ b/src/theme/stylus/menu.styl
@@ -4,7 +4,7 @@
     display: flex
     flex-wrap: wrap
     z-index: 101
-    transition: transform 0.5s
+    transition: transform 0.5s, border-bottom-color 0.5s
 
     i, .icon-button {
         position: relative
