--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -14,9 +14,17 @@
 
     .menu-bar {
         background-color: $bg
-        border-bottom: $table-border-color 1px solid;
+        border-bottom-color: $bg
+        border-bottom-width: 1px
+        border-bottom-style: solid
         margin: auto (- $page-padding);
+
+        &.bordered {
+            border-bottom-color: $table-border-color
+        }
     }
+
+    $table-border-color
 
     .sidebar {
         background-color: $sidebar-bg
