--- a/src/theme/stylus/menu.styl
+++ b/src/theme/stylus/menu.styl
@@ -16,10 +16,10 @@
 
         &:hover { cursor: pointer }
     }
+}
 
-    &.folded {
-        transform: translateY(-60px);
-    }
+html:not(.sidebar-visible) #menu-bar.folded {
+    transform: translateY(-60px);
 }
 
 .menu-title {
