--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -13,13 +13,16 @@
     }
 
     .menu-bar {
-        background-color: $bg
-        border-bottom-color: $bg
-        border-bottom-width: 1px
-        border-bottom-style: solid
         margin: auto (- $page-padding);
 
-        &.bordered {
+        & > #menu-bar-sticky-container {
+            background-color: $bg
+            border-bottom-color: $bg
+            border-bottom-width: 1px
+            border-bottom-style: solid
+        }
+
+        &.bordered > #menu-bar-sticky-container  {
             border-bottom-color: $table-border-color
         }
     }
