--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -5,6 +5,7 @@ html {
 body {
   margin: 0;
   font-size: 1rem;
+  overflow-x: hidden;
 }
 code {
   font-family: "Source Code Pro", Consolas, "Ubuntu Mono", Menlo, "DejaVu Sans Mono", monospace, monospace;
@@ -142,9 +143,12 @@ table thead td {
 .content img {
   max-width: 100%;
 }
-.menu-bar {
+#menu-bar {
   position: sticky;
   top: 0;
+  z-index: 101;
+}
+#menu-bar > #menu-bar-sticky-container {
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -157,15 +161,14 @@ table thead td {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  z-index: 101;
   -webkit-transition: -webkit-transform 0.5s, border-bottom-color 0.5s;
   -moz-transition: -moz-transform 0.5s, border-bottom-color 0.5s;
   -o-transition: -o-transform 0.5s, border-bottom-color 0.5s;
   -ms-transition: -ms-transform 0.5s, border-bottom-color 0.5s;
   transition: transform 0.5s, border-bottom-color 0.5s;
 }
-.menu-bar i,
-.menu-bar .icon-button {
+#menu-bar i,
+#menu-bar .icon-button {
   position: relative;
   margin: 0 10px;
   z-index: 10;
@@ -176,11 +179,11 @@ table thead td {
   -ms-transition: color 0.5s;
   transition: color 0.5s;
 }
-.menu-bar i:hover,
-.menu-bar .icon-button:hover {
+#menu-bar i:hover,
+#menu-bar .icon-button:hover {
   cursor: pointer;
 }
-html:not(.sidebar-visible) #menu-bar.folded {
+html:not(.sidebar-visible) #menu-bar:not(:hover).folded > #menu-bar-sticky-container {
   -webkit-transform: translateY(-60px);
   -moz-transform: translateY(-60px);
   -o-transform: translateY(-60px);
@@ -321,13 +324,15 @@ html:not(.sidebar-visible) #menu-bar.folded {
   text-decoration: none;
 }
 .light .menu-bar {
+  margin: auto -15px;
+}
+.light .menu-bar > #menu-bar-sticky-container {
   background-color: #fff;
   border-bottom-color: #fff;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  margin: auto -15px;
 }
-.light .menu-bar.bordered {
+.light .menu-bar.bordered > #menu-bar-sticky-container {
   border-bottom-color: #f2f2f2;
 }
 .light .sidebar {
@@ -473,13 +478,15 @@ html:not(.sidebar-visible) #menu-bar.folded {
   text-decoration: none;
 }
 .coal .menu-bar {
+  margin: auto -15px;
+}
+.coal .menu-bar > #menu-bar-sticky-container {
   background-color: #141617;
   border-bottom-color: #141617;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  margin: auto -15px;
 }
-.coal .menu-bar.bordered {
+.coal .menu-bar.bordered > #menu-bar-sticky-container {
   border-bottom-color: #1f2223;
 }
 .coal .sidebar {
@@ -625,13 +632,15 @@ html:not(.sidebar-visible) #menu-bar.folded {
   text-decoration: none;
 }
 .navy .menu-bar {
+  margin: auto -15px;
+}
+.navy .menu-bar > #menu-bar-sticky-container {
   background-color: #161923;
   border-bottom-color: #161923;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  margin: auto -15px;
 }
-.navy .menu-bar.bordered {
+.navy .menu-bar.bordered > #menu-bar-sticky-container {
   border-bottom-color: #1f2331;
 }
 .navy .sidebar {
@@ -777,13 +786,15 @@ html:not(.sidebar-visible) #menu-bar.folded {
   text-decoration: none;
 }
 .rust .menu-bar {
+  margin: auto -15px;
+}
+.rust .menu-bar > #menu-bar-sticky-container {
   background-color: #e1e1db;
   border-bottom-color: #e1e1db;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  margin: auto -15px;
 }
-.rust .menu-bar.bordered {
+.rust .menu-bar.bordered > #menu-bar-sticky-container {
   border-bottom-color: #d7d7cf;
 }
 .rust .sidebar {
@@ -929,13 +940,15 @@ html:not(.sidebar-visible) #menu-bar.folded {
   text-decoration: none;
 }
 .ayu .menu-bar {
+  margin: auto -15px;
+}
+.ayu .menu-bar > #menu-bar-sticky-container {
   background-color: #0f1419;
   border-bottom-color: #0f1419;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  margin: auto -15px;
 }
-.ayu .menu-bar.bordered {
+.ayu .menu-bar.bordered > #menu-bar-sticky-container {
   border-bottom-color: #182028;
 }
 .ayu .sidebar {
