--- a/src/theme/stylus/general.styl
+++ b/src/theme/stylus/general.styl
@@ -1,13 +1,12 @@
 html {
     font-family: "Open Sans", sans-serif
     color: #333
-    overflow-x: hidden
 }
 
 body {
     margin: 0;
     font-size: 1rem;
-    overflow-x: hidden
+    overflow-x: hidden;
 }
 
 code {
