feat(src/theme): Scrollbar theme

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -65,6 +65,7 @@
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { } 
             if (theme === null || theme === undefined) { theme = 'light'; }
             document.body.className = theme;
+            document.querySelector('html').className = theme;
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
