--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -46,7 +46,7 @@
         <!-- Set the theme before any content is loaded, prevents flash -->
         <script type="text/javascript">
             var theme;
-            try { theme = store.get('mdbook-theme'); } catch(e) { } 
+            try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { } 
             if (theme === null || theme === undefined) { theme = 'light'; }
             document.body.className = theme;
         </script>
@@ -55,7 +55,7 @@
         <script type="text/javascript">
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
-                try { sidebar = store.get('mdbook-sidebar'); } catch(e) { }
+                try { sidebar = localStorage.getItem('mdbook-sidebar'); } catch(e) { }
                 sidebar = sidebar || 'visible';
             }
             document.querySelector('html').classList.add("sidebar-" + sidebar);
