--- a/src/theme/stylus/themes/coal.styl
+++ b/src/theme/stylus/themes/coal.styl
@@ -29,4 +29,13 @@ $table-border-color = lighten($bg, 5%)
 $table-header-bg = lighten($bg, 20%)
 $table-alternate-bg = lighten($bg, 3%)
 
+$searchbar-border-color = #aaa
+$searchbar-bg = #b7b7b7
+$searchbar-fg = #000
+$searchbar-shadow-color = #aaa
+$searchresults-header-fg = #666
+$searchresults-border-color = #98a3ad
+$searchresults-li-bg = #2b2b2f
+$search-mark-bg = #355c7d
+
 @import 'base'
