--- a/src/theme/stylus/themes/navy.styl
+++ b/src/theme/stylus/themes/navy.styl
@@ -29,4 +29,13 @@ $table-border-color = lighten($bg, 5%)
 $table-header-bg = lighten($bg, 20%)
 $table-alternate-bg = lighten($bg, 3%)
 
+$searchbar-border-color = #aaa
+$searchbar-bg = #aeaec6
+$searchbar-fg = #000
+$searchbar-shadow-color = #aaa
+$searchresults-header-fg = #5f5f71
+$searchresults-border-color = #5c5c68
+$searchresults-li-bg = #242430
+$search-mark-bg = #a2cff5
+
 @import 'base'
