--- a/src/theme/stylus/themes/ayu.styl
+++ b/src/theme/stylus/themes/ayu.styl
@@ -29,4 +29,13 @@ $table-border-color = lighten($bg, 5%)
 $table-header-bg = lighten($bg, 20%)
 $table-alternate-bg = lighten($bg, 3%)
 
+$searchbar-border-color = #848484
+$searchbar-bg = #424242
+$searchbar-fg = #fff
+$searchbar-shadow-color = #d4c89f
+$searchresults-header-fg = #666
+$searchresults-border-color = #888
+$searchresults-li-bg = #252932
+$search-mark-bg = #e3b171
+
 @import 'base'
