--- a/src/theme/stylus/themes/light.styl
+++ b/src/theme/stylus/themes/light.styl
@@ -16,7 +16,7 @@ $icons-hover = #333333
 
 $links = #4183c4
 
-$inline-code-color = #6e6b5e;
+$inline-code-color = #6e6b5e
 
 $theme-popup-bg = #fafafa
 $theme-popup-border = #cccccc
@@ -28,5 +28,14 @@ $quote-border = darken($quote-bg, 5%)
 $table-border-color = darken($bg, 5%)
 $table-header-bg = darken($bg, 20%)
 $table-alternate-bg = darken($bg, 3%)
+
+$searchbar-border-color = #aaa
+$searchbar-bg = #fafafa
+$searchbar-fg = #000
+$searchbar-shadow-color = #aaa
+$searchresults-header-fg = #666
+$searchresults-border-color = #888
+$searchresults-li-bg = #e4f2fe
+$search-mark-bg = #a2cff5
 
 @import 'base'
