--- a/src/theme/stylus/themes/rust.styl
+++ b/src/theme/stylus/themes/rust.styl
@@ -29,4 +29,13 @@ $table-border-color = darken($bg, 5%)
 $table-header-bg = #b3a497
 $table-alternate-bg = darken($bg, 3%)
 
+$searchbar-border-color = #aaa
+$searchbar-bg = #fafafa
+$searchbar-fg = #000
+$searchbar-shadow-color = #aaa
+$searchresults-header-fg = #666
+$searchresults-border-color = #888
+$searchresults-li-bg = #dec2a2
+$search-mark-bg = #e69f67
+
 @import 'base'
