Updated the light theme to have a lighter scrollbar

--- a/src/theme/stylus/themes/ayu.styl
+++ b/src/theme/stylus/themes/ayu.styl
@@ -9,6 +9,8 @@ $sidebar-non-existant = #5c6773
 $sidebar-active = #ffb454
 $sidebar-spacer = #2d334f
 
+$scrollbar = $sidebar-fg
+
 $icons = #737480
 $icons-hover = #b7b9cc
 
