--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -38,7 +38,7 @@
         }
 
         &::-webkit-scrollbar-thumb {
-            background: $sidebar-fg;
+            background: $scrollbar;
         }
     }
 
@@ -186,6 +186,6 @@
     }
 
     ::-webkit-scrollbar-thumb {
-        background: $fg;
+        background: $scrollbar;
     }
 }
