--- a/src/theme/stylus/themes/coal.styl
+++ b/src/theme/stylus/themes/coal.styl
@@ -9,6 +9,8 @@ $sidebar-non-existant = #505254
 $sidebar-active = #3473ad
 $sidebar-spacer = #393939
 
+$scrollbar = $sidebar-fg
+
 $icons = #43484d
 $icons-hover = #b3c0cc
 
