--- a/src/theme/stylus/themes/light.styl
+++ b/src/theme/stylus/themes/light.styl
@@ -9,6 +9,8 @@ $sidebar-non-existant = #aaaaaa
 $sidebar-active = #008cff
 $sidebar-spacer = #f4f4f4
 
+$scrollbar = #cccccc
+
 $icons = #cccccc
 $icons-hover = #333333
 
