--- a/src/theme/stylus/themes/navy.styl
+++ b/src/theme/stylus/themes/navy.styl
@@ -9,6 +9,8 @@ $sidebar-non-existant = #505274
 $sidebar-active = #2b79a2
 $sidebar-spacer = #2d334f
 
+$scrollbar = $sidebar-fg
+
 $icons = #737480
 $icons-hover = #b7b9cc
 
