--- a/src/theme/stylus/themes/rust.styl
+++ b/src/theme/stylus/themes/rust.styl
@@ -9,6 +9,8 @@ $sidebar-non-existant = #505254
 $sidebar-active = #e69f67
 $sidebar-spacer = #45373a
 
+$scrollbar = $sidebar-fg
+
 $icons = #737480
 $icons-hover = #262625
 
