fix(theme/stylus/sidebar): Contain scrolling to the sidebar
> A position fixed left navigation bar does not want to hand off scrolling to the document because a scroll gesture performed on the navigation bar is almost never meant to scroll the document. In this case, the author can use contain on the sidebar to prevent scrolling from being chained to the parent document element.

https://wicg.github.io/overscroll-behavior/#motivating-examples

--- a/src/theme/stylus/sidebar.styl
+++ b/src/theme/stylus/sidebar.styl
@@ -11,6 +11,7 @@
     font-size: 0.875em
     box-sizing: border-box
     -webkit-overflow-scrolling: touch
+    overscroll-behavior-y: contain;
 
     // Animation: slide away
     transition: transform 0.5s
