feat(theme/book): Scroll to top when clicking the page title
Common pattern, especially on mobile devices where the page can be quite long.

--- a/src/theme/stylus/menu.styl
+++ b/src/theme/stylus/menu.styl
@@ -38,4 +38,5 @@ html:not(.sidebar-visible) #menu-bar:not(:hover).folded > #menu-bar-sticky-conta
     white-space: nowrap
     overflow: hidden
     text-overflow: ellipsis
+    cursor: pointer;
 }
